[project]
name = "ltx"
version = "1.0.0"
description = "LTX-2 Video Generation"
requires-python = ">=3.10"
dependencies = [
    "ltx-core",
    "ltx-pipelines",
    # gradio 5.23.1 dependencies (for local modules/gradio)
    "gradio-client==1.8.0",
    "aiofiles>=23.2.1",
    "anyio>=4.0",
    "fastapi>=0.100",
    "ffmpy",
    "groovy",
    "httpx>=0.24",
    "huggingface-hub>=0.19",
    "jinja2>=3.0",
    "markupsafe>=2.0",
    "numpy>=1.21",
    "orjson>=3.0",
    "packaging",
    "pandas>=1.0",
    "pillow>=9.0",
    "opencv-python>=4.5",
    "pydantic>=2.0",
    "pydub",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "safehttpx>=0.1.1",
    "semantic-version>=2.10",
    "starlette>=0.30",
    "tomlkit>=0.12",
    "typer>=0.9",
    "typing-extensions>=4.0",
    "uvicorn>=0.20",
    "websockets>=11.0",
]

[tool.uv.sources]
ltx-core = { workspace = true }
ltx-pipelines = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
    "pytest~=9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = []

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle (warnings)
    "I", # isort
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EXE", # flake8-executable
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8--use-pathlib
    "ERA", # flake8-eradicate
    "RUF", # ruff specific rules
    "PL", # pylint
]
ignore = [
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN204", # Missing type annotation for special method
    "COM812", # Missing trailing comma
    "PTH123", # `open()` should be replaced by `Path.open()`
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "N812", # Lowercase  imported as non-lowercase
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["ltx_core", "ltx_pipelines", "ltx_trainer"]
